add picture, color background

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 
   <body>
     <div class="container">
-      <h2>Do you want me to shout, enter text into the form and you will see!</h2>
+      <h4>Do you want me shout? Enter text into the form and you will see!</h4>
       <form>
         <div class="form-group">
-        <label for="name">Message</label>
+        <label for="message">Message</label>
         <input id="message" class="form-control" type="text">
         </div>
       </form>
+      <button class="button" type="btn btn-primary" name="submit">Submit</button>
+
+      <div class="row">
+        <div class="col-md-4">
+          <img class="image" src="img/shout.jpg" alt="Image of shouting face" style="width:300px; height:auto">
+        </div>
+        <div class="col-md-8">
+          <div class="shout">
+
+          </div>
+        </div>
+      </div>
     </div>
 
   </body>
